--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -237,6 +237,8 @@ repos:
         exclude: |
           (?x)
           ^airflow/_vendor/
+          ^airflow/_vendor/|
+          ^astronomer-.*\.py$
   - repo: local
     hooks:
       - id: lint-openapi
@@ -462,7 +464,8 @@ repos:
       - id: bats-tests
         name: Run BATS bash tests for changed Breeze bash files
         language: system
-        entry: ./scripts/ci/pre_commit/pre_commit_bat_tests.sh tests/bats/breeze/
+        entry: "./scripts/ci/pre_commit/pre_commit_bat_tests.sh tests/bats/breeze/"
+        exclude: astronomer-certified-setup.py
         files: ^breeze$|^breeze-complete$|^tests/bats/breeze
         pass_filenames: false
       - id: bats-tests
@@ -636,7 +639,7 @@ repos:
         language: system
         entry: ./scripts/ci/pre_commit/pre_commit_mypy.sh
         files: \.py$
-        exclude: ^dev|^provider_packages|^chart|^docs|^airflow/_vendor/
+        exclude: ^dev|^provider_packages|^chart|^docs|^airflow/_vendor/|astronomer-certified-setup.py$
       - id: mypy
         name: Run mypy for helm chart tests
         language: system
@@ -650,6 +653,36 @@ repos:
         files: ^docs/.*\.py$
         exclude: rtd-deprecation
         require_serial: false
+      - id: pylint
+        name: Run pylint for main code
+        language: system
+        entry: ./scripts/ci/pre_commit/pre_commit_pylint.sh
+        files: \.py$
+        exclude: |
+          ^scripts/.*\.py$|
+          ^dev|
+          ^provider_packages|
+          ^chart|
+          ^tests|
+          ^kubernetes_tests|
+          ^airflow/_vendor/|
+          astronomer-certified-setup.py$
+        pass_filenames: true
+        require_serial: true
+      - id: pylint
+        name: Run pylint for tests
+        language: system
+        entry: env PYLINTRC=pylintrc-tests ./scripts/ci/pre_commit/pre_commit_pylint.sh
+        files: ^tests/.*\.py$
+        pass_filenames: true
+        require_serial: true
+      - id: pylint
+        name: Run pylint for helm chart tests
+        language: system
+        entry: env PYLINTRC=pylintrc-tests ./scripts/ci/pre_commit/pre_commit_pylint.sh
+        files: ^chart/.*\.py$
+        pass_filenames: true
+        require_serial: true
       - id: flake8
         name: Run flake8
         language: system
