Build and publish wheels from Github Actions for Astronomer releases
(cherry-picked from 80cd11775611fd0e60d828ffe7927cc3b18100fd)
(cherry picked from commit acb0953e4e93896c0b8070fb28167c90d453a7dc)
(cherry picked from commit de223d7eebbc9c6c572e49433f235021037a73d3)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -174,7 +174,7 @@ repos:
         entry: yamllint -c yamllint-config.yml --strict
         types: [yaml]
         exclude:
-          ^.*init_git_sync\.template\.yaml$|^.*airflow\.template\.yaml$|^chart/(?:templates|files)/.*\.yaml
+          ^.*init_git_sync\.template\.yaml$|^.*airflow\.template\.yaml$|^chart/(?:templates|files)/.*\.yaml|^.github/workflows/ci.yml$   # yamllint disable-line rule:line-length
   ##
   ## Dear committer.
   ##
@@ -365,7 +365,7 @@ repos:
         language: system
         entry: "./scripts/ci/pre_commit/pre_commit_mypy.sh"
         files: \.py$
-        exclude: ^dev|^provider_packages|^chart
+        exclude: ^dev|^provider_packages|^chart|^astronomer-certified-setup.py
       - id: mypy
         name: Run mypy for helm chart tests
         language: system
@@ -378,6 +378,7 @@ repos:
         language: system
         entry: "./scripts/ci/pre_commit/pre_commit_flake8.sh"
         files: \.py$
+        exclude: ^dev|astronomer-certified-setup.py
         pass_filenames: true
       - id: bats-in-container-tests
         name: Run in container bats tests
