--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,10 @@ on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: '28 0 * * *'
   push:
-    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-test']
+    branches: ['master', 'v1-10-test', 'v1-10-*']
+    tags: ['v1.10.14\+astro.*']
   pull_request:
-    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-test']
+    branches: ['master', 'v1-10-test', 'v1-10-*']
 
 env:
 
@@ -187,7 +188,7 @@ jobs:
     timeout-minutes: 20
     name: "Verify CI Image Py${{matrix.python-version}}"
     runs-on: ubuntu-20.04
-    needs: [build-info, ci-images]
+    needs: [ build-info, ci-images ]
     strategy:
       matrix:
         python-version: ${{ fromJson(needs.build-info.outputs.pythonVersions) }}
@@ -784,10 +785,9 @@ jobs:
       - tests-mysql
       - tests-kubernetes
       - prod-images
-      - verify-prod-images
       - docs
     if: >
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
+      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-15' ||
       github.ref == 'refs/heads/v2-0-test') &&
       github.event_name != 'schedule'
     strategy:
@@ -827,7 +827,7 @@ jobs:
       - verify-ci-images
       - docs
     if: >
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
+      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-15' ||
       github.ref == 'refs/heads/v2-0-test') &&
       github.event_name != 'schedule'
     strategy:
@@ -866,7 +866,7 @@ jobs:
     env:
       PYTHON_MAJOR_MINOR_VERSION: ${{ matrix.python-version }}
     if: >
-      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
+      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-15' ||
       github.ref == 'refs/heads/v2-0-test'
     steps:
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
@@ -890,47 +890,51 @@ jobs:
           path: './files/constraints-${{matrix.python-version}}/constraints-${{matrix.python-version}}.txt'
           retention-days: 7
 
-  constraints-push:
+  deploy:
     timeout-minutes: 10
-    name: "Constraints push"
+    name: "Publish wheels to Astronomer"
     runs-on: ubuntu-20.04
     needs:
-      - build-info
-      - constraints
-      - verify-ci-images
-      - verify-prod-images
-      - static-checks
-      - tests-sqlite
-      - tests-mysql
-      - tests-postgres
-      - tests-kubernetes
-    if: >
-      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
-      github.ref == 'refs/heads/v2-0-test'
+       - tests-sqlite
+       - tests-postgres
+       - tests-kubernetes
+    if: |
+      (startsWith(github.ref, 'refs/tags/v1.10.15+astro') || github.ref == 'refs/heads/v1-10-15') &&
+      github.event_name != 'pull_request'
+    env:
+      PULL_PYTHON_BASE_IMAGES_FROM_CACHE: "false"
+      PYTHON_MAJOR_MINOR_VERSION: ${{ matrix.python-version }}
+      CI_JOB_TYPE: "Prod image"
     steps:
-      - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
-        uses: actions/checkout@v2
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v2
         with:
-          persist-credentials: false
-          submodules: recursive
-      - name: "Set constraints branch name"
-        id: constraints-branch
-        run: ./scripts/ci/constraints/ci_branch_constraints.sh
-      - name: Checkout ${{ steps.constraints-branch.outputs.branch }}
-        uses: actions/checkout@v2
+          python-version: '3.7'
+      - run: |
+          pip install --upgrade pip==19.0.2
+          pip install packaging GitPython wheel
+      - name: Create Python Wheel
+        run: ./scripts/ci/astronomer-release.sh
+      - name: "Deploy Python Wheel and tar.gz"
+        uses: actions-hub/gcloud@master
+        env:
+          APPLICATION_CREDENTIALS: ${{secrets.ASTRONOMER_PROD}}
+          PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
         with:
-          path: "repo"
-          ref: ${{ steps.constraints-branch.outputs.branch }}
-          persist-credentials: false
-      - name: "Get all artifacts (constraints)"
-        uses: actions/download-artifact@v2
+          args: cp -a public-read -r ./dist/* gs://pip.astronomer.io/simple
+          cli: gsutil
+      - name: "Deploy '.build' file (containing deployed version number)"
+        uses: actions-hub/gcloud@master
+        env:
+          APPLICATION_CREDENTIALS: ${{secrets.ASTRONOMER_PROD}}
+          PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
         with:
-          path: 'artifacts'
-      - name: "Commit changed constraint files for ${{needs.build-info.outputs.pythonVersions}}"
-        run: ./scripts/ci/constraints/ci_commit_constraints.sh
-      - name: "Push changes"
-        uses: ./.github/actions/github-push-action
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ steps.constraints-branch.outputs.branch }}
-          directory: "repo"
+          args: -h "Cache-Control:no-cache,max-age=0" cp -a public-read -r "./**/*.build" gs://pip.astronomer.io/simple/astronomer-certified
+          cli: gsutil
+      - name: Index Pages
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS_CONTENT: ${{secrets.ASTRONOMER_PROD}}
+        run: |
+          git clone https://github.com/astronomer/pip-release-utilities.git pip-release-utilities
+          ./pip-release-utilities/build-index-page.sh pip.astronomer.io simple/apache-airflow
+          ./pip-release-utilities/build-index-page.sh pip.astronomer.io simple/astronomer-certified
