--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ on:  # yamllint disable-line rule:truthy
     - cron: '28 0 * * *'
   push:
     branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-*']
-    tags: ['v2.0.1\+astro.*']
+    tags: ['v2.0.2\+astro.*']
   pull_request:
     branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-*']
 
@@ -1032,7 +1032,7 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
       - prod-images
       - docs
     if: >
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-0') &&
+      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-2') &&
       github.event_name != 'schedule'
     strategy:
       matrix:
@@ -1091,7 +1091,7 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
       - ci-images
       - docs
     if: >
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-1' ) &&
+      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-2' ) &&
       github.event_name != 'schedule'
     strategy:
       matrix:
@@ -1225,3 +1225,56 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
           tags: true
           force: true
           branch: master
+
+  deploy:
+    timeout-minutes: 10
+    name: "Publish wheels"
+    runs-on: ubuntu-latest
+    needs:
+      - tests-sqlite
+      - tests-postgres
+      - tests-mysql
+      - docs
+    if: |
+      (startsWith(github.ref, 'refs/tags/v2.0.2+astro') || github.ref == 'refs/heads/v2-0-2') &&
+      github.event_name != 'pull_request'
+    env:
+      PULL_PYTHON_BASE_IMAGES_FROM_CACHE: "false"
+      PYTHON_MAJOR_MINOR_VERSION: ${{ matrix.python-version }}
+      CI_JOB_TYPE: "Prod image"
+      INSTALL_PROVIDERS_FROM_SOURCES: false
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - run: |
+          pip install --upgrade pip==19.0.2
+          pip install packaging GitPython wheel
+      - name: Create Python Wheel
+        run: ./scripts/ci/astronomer-release.sh
+      - name: "Deploy Python Wheel and tar.gz"
+        uses: actions-hub/gcloud@330.0.0
+        env:
+          APPLICATION_CREDENTIALS: ${{secrets.ASTRONOMER_PROD}}
+          PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
+        with:
+          args: cp -a public-read -r ./dist/* gs://pip.astronomer.io/simple
+          cli: gsutil
+      - name: "Deploy '.build' file (containing deployed version number)"
+        uses: actions-hub/gcloud@330.0.0
+        env:
+          APPLICATION_CREDENTIALS: ${{secrets.ASTRONOMER_PROD}}
+          PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
+        with:
+          args: >
+            -h "Cache-Control:no-cache,max-age=0"
+            cp -a public-read -r "./**/*.build" gs://pip.astronomer.io/simple/astronomer-certified
+          cli: gsutil
+      - name: Index Pages
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS_CONTENT: ${{secrets.ASTRONOMER_PROD}}
+        run: |
+          git clone https://github.com/astronomer/pip-release-utilities.git pip-release-utilities
+          ./pip-release-utilities/build-index-page.sh pip.astronomer.io simple/apache-airflow
+          ./pip-release-utilities/build-index-page.sh pip.astronomer.io simple/astronomer-certified
