[astro] Update tests - Replace version in CI - v2-1-0
- Add 'v2-1-0'
- Run CI on creation of Tag

(cherry picked from commit 7e46e908bd8f735e63d95dd76c1df4770cd9497b)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -663,7 +663,7 @@ repos:
         entry: ./scripts/ci/pre_commit/pre_commit_flake8.sh
         files: \.py$
         pass_filenames: true
-        exclude: ^airflow/_vendor/
+        exclude: ^airflow/_vendor/|^astronomer-certified-setup.py
       - id: ui-lint
         name: ESLint against airflow/ui
         language: node
