--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ on:  # yamllint disable-line rule:truthy
     branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-1-*']
     tags: ['v2.1.0\+astro.*']
   pull_request:
-    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-1-test']
+    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-1-*']
 
 env:
   MOUNT_SELECTED_LOCAL_SOURCES: "false"
@@ -1158,7 +1158,7 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
       CURRENT_PYTHON_MAJOR_MINOR_VERSIONS_AS_STRING: ${{needs.build-info.outputs.pythonVersionsListAsString}}
     # Only run it for direct pushes
     if: >
-      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
+      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-1-0' ||
       github.ref == 'refs/heads/v2-1-test'
     steps:
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
