--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,10 @@ on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: '28 0 * * *'
   push:
-    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-test']
+    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-test', 'v2-0-0']
+    tags: ['v2.0.0+astro.*']
   pull_request:
-    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-test']
+    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-test', 'v2-0-0']
 
 env:
 
@@ -916,8 +917,7 @@ jobs:
       - verify-prod-images
       - docs
     if: >
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
-      github.ref == 'refs/heads/v2-0-test') &&
+      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-0') &&
       github.event_name != 'schedule'
     strategy:
       matrix:
@@ -956,8 +956,7 @@ jobs:
       - verify-ci-images
       - docs
     if: >
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
-      github.ref == 'refs/heads/v2-0-test') &&
+      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-0' ) &&
       github.event_name != 'schedule'
     strategy:
       matrix:
@@ -992,9 +991,7 @@ jobs:
       - ci-images
     env:
       PYTHON_MAJOR_MINOR_VERSION: ${{ matrix.python-version }}
-    if: >
-      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
-      github.ref == 'refs/heads/v2-0-test'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-0'
     steps:
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@v2
@@ -1030,9 +1027,7 @@ jobs:
       - tests-mysql
       - tests-postgres
       - tests-kubernetes
-    if: >
-      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
-      github.ref == 'refs/heads/v2-0-test'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-0'
     steps:
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@v2
