--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,10 @@ on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: '28 0 * * *'
   push:
-    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-test']
+    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-*']
+    tags: ['v2.0.1\+astro.*']
   pull_request:
-    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-test']
+    branches: ['master', 'v1-10-test', 'v1-10-stable', 'v2-0-*']
 
 env:
   MOUNT_SELECTED_LOCAL_SOURCES: "false"
@@ -1031,8 +1032,7 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
       - prod-images
       - docs
     if: >
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
-      github.ref == 'refs/heads/v2-0-test') &&
+      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-0') &&
       github.event_name != 'schedule'
     strategy:
       matrix:
@@ -1091,8 +1091,7 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
       - ci-images
       - docs
     if: >
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
-      github.ref == 'refs/heads/v2-0-test') &&
+      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-1' ) &&
       github.event_name != 'schedule'
     strategy:
       matrix:
@@ -1139,7 +1138,7 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
       CURRENT_PYTHON_MAJOR_MINOR_VERSIONS_AS_STRING: ${{needs.build-info.outputs.pythonVersionsListAsString}}
     # Only run it for direct pushes
     if: >
-      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1-10-test' ||
+      github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v2-0-2' ||
       github.ref == 'refs/heads/v2-0-test'
     steps:
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
