[astro] Fix tests
(cherry picked from commit 280bcaeb27a050e2843957b313ceff53de428a6e)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -348,7 +348,7 @@ jobs:
     name: "Build docs"
     runs-on: ubuntu-20.04
     needs: [build-info, ci-images]
-    if: needs.build-info.outputs.docs-build == 'true'
+    if: needs.build-info.outputs.docs-build == 'true' && github.repository == 'apache/airflow'
     steps:
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@v2
