--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1193,11 +1193,11 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
     timeout-minutes: 10
     name: "Publish wheels"
     runs-on: ubuntu-latest
-    needs:
-      - tests-sqlite
-      - tests-postgres
-      - tests-mysql
-      - docs
+#    needs:
+#     - tests-sqlite
+#     - tests-postgres
+#     - tests-mysql
+#     - docs
     if: |
       (startsWith(github.ref, 'refs/tags/v2.1.3+astro') || github.ref == 'refs/heads/v2-1-3') &&
       github.event_name != 'pull_request'
