--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1230,11 +1230,11 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
     timeout-minutes: 10
     name: "Publish wheels"
     runs-on: ubuntu-latest
-    needs:
-      - tests-sqlite
-      - tests-postgres
-      - tests-mysql
-      - docs
+#    needs:
+#     - tests-sqlite
+#     - tests-postgres
+#     - tests-mysql
+#     - docs
     if: |
       (startsWith(github.ref, 'refs/tags/v2.0.2+astro') || github.ref == 'refs/heads/v2-0-2') &&
       github.event_name != 'pull_request'
