--- a/airflow/config_templates/config.yml
+++ b/airflow/config_templates/config.yml
@@ -2057,7 +2057,7 @@
       version_added: ~
       type: boolean
       example: ~
-      default: "False"
+      default: "True"
     - name: tcp_keep_idle
       description: |
         When the `enable_tcp_keepalive` option is enabled, TCP probes a connection that has
