--- a/airflow/www_rbac/package.json
+++ b/airflow/www_rbac/package.json
@@ -43,7 +43,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^6.0.0",
-    "handlebars": "^4.7.6",
     "imports-loader": "^1.1.0",
     "jquery": ">=3.4.0",
     "js-yaml": "^3.14.0",
@@ -68,10 +67,11 @@
     "datatables.net-bs": "^1.10.23",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": ">=3.4.0",
-    "js-yaml": "^3.14.0",
-    "lodash": "^4.17.20",
     "moment-timezone": "^0.5.28",
     "nvd3": "^1.8.6",
     "url-search-params-polyfill": "^8.1.0"
+  },
+  "resolutions": {
+    "lodash": "^4.17.21"
   }
 }
