Exclude ``yarn.lock`` from built Python wheel file (#16577)
Same as https://github.com/apache/airflow/pull/16494 - However that PR had to be reverted in https://github.com/apache/airflow/pull/16518 as it failed building of PROD image, this PR/commit will fix it.

PROBLEM: Currently the airflow wheel is built with the yarn.lock which is not actually used by the airflow itself. Having this file in the docker image causes the clair and trivy scanners to fail

FIX: The fix is to exclude the yarn.lock by specifying it in the manifest.in
(cherry picked from commit aa79bfe7e71f5e90dbfb3f2deb3ad5b44e3259ab)
(cherry picked from commit 6c80e3ff59e3d265c24cfa2d402cfd2ad500d7ee)
(cherry picked from commit 25d46e4e99a6f98765e5c10e0775415f0eaaf11b)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -36,3 +36,4 @@ graft scripts/upstart
 graft airflow/config_templates
 recursive-exclude airflow/www_rbac/node_modules *
 global-exclude __pycache__  *.pyc
+exclude airflow/www_rbac/yarn.lock
