--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -802,11 +802,11 @@ jobs:
     timeout-minutes: 10
     name: "Publish wheels"
     runs-on: ubuntu-20.04
-    needs:
-      - tests-sqlite
-      - tests-postgres
-      - tests-mysql
-      - docs
+#    needs:
+#      - tests-sqlite
+#      - tests-postgres
+#      - tests-mysql
+#      - docs
     if: |
       (startsWith(github.ref, 'refs/tags/v1.10.14+astro') || github.ref == 'refs/heads/v1-10-14') &&
       github.event_name != 'pull_request'
