--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: '28 0 * * *'
   push:
-    branches: ['main', 'v[0-9]+-[0-9]+-test']
+    branches: ['main', 'v[0-9]+-[0-9]+-[0-9]']
     tags: ['v2.1.3\+astro.*']
   pull_request:
     branches: ['main', 'v[0-9]+-[0-9]+-test', 'v[0-9]+-[0-9]+-stable']
@@ -989,20 +989,8 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
     timeout-minutes: 50
     name: Helm Chart Executor Upgrade
     runs-on: ${{ fromJson(needs.build-info.outputs.runsOn) }}
-    needs:
-      - build-info
-      - static-checks
-      - static-checks-pylint
-      - tests-sqlite
-      - tests-postgres
-      - tests-mysql
-      - tests-kubernetes
-      - prod-images
-      - docs
+    needs: [build-info, prod-images]
     # TODO: Generalize me (find a better way to select matching branches)
-    if: >
-      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v2-1-3') &&
-      github.event_name != 'schedule'
     strategy:
       matrix:
         python-version: ${{ fromJson(needs.build-info.outputs.pythonVersions) }}
@@ -1039,39 +1027,6 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
           VERIFY_IMAGE: "false"
       - name: "Cache virtualenv for kubernetes testing"
         uses: actions/cache@v2
-          PUSH_PYTHON_BASE_IMAGE: ${{ steps.push-python-image.outputs.wanted}}
-
-  push-ci-images-to-github-registry:
-    permissions:
-      packages: write
-    timeout-minutes: 10
-    name: "Push CI images as cache to GitHub Registry"
-    runs-on: ${{ fromJson(needs.build-info.outputs.runsOn) }}
-    needs:
-      - build-info
-      - static-checks
-      - static-checks-pylint
-      - tests-sqlite
-      - tests-postgres
-      - tests-mysql
-      - tests-kubernetes
-      - ci-images
-      - docs
-    # TODO: Generalize me (find a better way to select matching branches)
-    if: >
-      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v2-1-3' ) &&
-      github.event_name != 'schedule'
-    strategy:
-      matrix:
-        python-version: ${{ fromJson(needs.build-info.outputs.pythonVersions) }}
-    env:
-      RUNS_ON: ${{ fromJson(needs.build-info.outputs.runsOn) }}
-      PYTHON_MAJOR_MINOR_VERSION: ${{ matrix.python-version }}
-      GITHUB_REGISTRY_PUSH_IMAGE_TAG: "latest"
-      GITHUB_REGISTRY: ${{ needs.ci-images.outputs.githubRegistry }}
-    steps:
-      - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
-        uses: actions/checkout@v2
         with:
           path: ".build/.kubernetes_venv"
           key: "kubernetes-${{ needs.build-info.outputs.defaultPythonVersion }}\
@@ -1099,7 +1054,6 @@ ${{ hashFiles('.pre-commit-config.yaml') }}"
             kind-logs-KubernetesExecutor
           path: /tmp/kind_logs_*
           retention-days: 7
-
   constraints:
     permissions:
       contents: write
